--- a/edu.wustl.cse.harmsk.eclipse.gittemplatevariables/.project
+++ b/edu.wustl.cse.harmsk.eclipse.gittemplatevariables/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>edu.wustl.cse.harmsk.gittemplatevariables.core</name>
+	<name>edu.wustl.cse.harmsk.eclipse.gittemplatevariables</name>
 	<comment></comment>
 	<projects>
 	</projects>
